tests/ui/proc-macro/attribute.stderr
error[E0539]: malformed `proc_macro_derive` attribute input
  --> $DIR/attribute.rs:9:1
   |
LL | #[proc_macro_derive]
   | ^^^^^^^^^^^^^^^^^^^^ expected this to be a list
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/procedural-macros.html#derive-macros>
help: try changing it to one of the following valid forms of the attribute
   |
LL | #[proc_macro_derive(TraitName)]
   |                    +++++++++++
LL | #[proc_macro_derive(TraitName, attributes(name1, name2, ...))]
   |                    ++++++++++++++++++++++++++++++++++++++++++

error[E0539]: malformed `proc_macro_derive` attribute input
  --> $DIR/attribute.rs:17:1
   |
LL | #[proc_macro_derive = ""]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^ expected this to be a list
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/procedural-macros.html#derive-macros>
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[proc_macro_derive = ""]
LL + #[proc_macro_derive(TraitName)]
   |
LL - #[proc_macro_derive = ""]
LL + #[proc_macro_derive(TraitName, attributes(name1, name2, ...))]
   |

error[E0539]: malformed `proc_macro_derive` attribute input
  --> $DIR/attribute.rs:25:1
   |
LL | #[proc_macro_derive(d3, a, b)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^-^^^^^
   |                         |
   |                         the only valid argument here is `attributes`
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/procedural-macros.html#derive-macros>
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[proc_macro_derive(d3, a, b)]
LL + #[proc_macro_derive(TraitName)]
   |
LL - #[proc_macro_derive(d3, a, b)]
LL + #[proc_macro_derive(TraitName, attributes(name1, name2, ...))]
   |

error[E0539]: malformed `proc_macro_derive` attribute input
  --> $DIR/attribute.rs:33:1
   |
LL | #[proc_macro_derive(d4, attributes(a), b)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^-------------^^-^^
   |                         |              |
   |                         |              remove this argument
   |                         expected no more arguments after this
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/procedural-macros.html#derive-macros>
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[proc_macro_derive(d4, attributes(a), b)]
LL + #[proc_macro_derive(TraitName)]
   |
LL - #[proc_macro_derive(d4, attributes(a), b)]
LL + #[proc_macro_derive(TraitName, attributes(name1, name2, ...))]
   |

error[E0565]: malformed `proc_macro_derive` attribute input
  --> $DIR/attribute.rs:42:1
   |
LL | #[proc_macro_derive("a")]
   | ^^^^^^^^^^^^^^^^^^^^---^^
   |                     |
   |                     didn't expect a literal here
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/procedural-macros.html#derive-macros>
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[proc_macro_derive("a")]
LL + #[proc_macro_derive(TraitName)]
   |
LL - #[proc_macro_derive("a")]
LL + #[proc_macro_derive(TraitName, attributes(name1, name2, ...))]
   |

error[E0565]: malformed `proc_macro_derive` attribute input
  --> $DIR/attribute.rs:50:1
   |
LL | #[proc_macro_derive(d6 = "")]
   | ^^^^^^^^^^^^^^^^^^^^^^^----^^
   |                        |
   |                        didn't expect any arguments here
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/procedural-macros.html#derive-macros>
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[proc_macro_derive(d6 = "")]
LL + #[proc_macro_derive(TraitName)]
   |
LL - #[proc_macro_derive(d6 = "")]
LL + #[proc_macro_derive(TraitName, attributes(name1, name2, ...))]
   |

error[E0539]: malformed `proc_macro_derive` attribute input
  --> $DIR/attribute.rs:58:1
   |
LL | #[proc_macro_derive(m::d7)]
   | ^^^^^^^^^^^^^^^^^^^^-----^^
   |                     |
   |                     expected a valid identifier here
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/procedural-macros.html#derive-macros>
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[proc_macro_derive(m::d7)]
LL + #[proc_macro_derive(TraitName)]
   |
LL - #[proc_macro_derive(m::d7)]
LL + #[proc_macro_derive(TraitName, attributes(name1, name2, ...))]
   |

error[E0565]: malformed `proc_macro_derive` attribute input
  --> $DIR/attribute.rs:66:1
   |
LL | #[proc_macro_derive(d8(a))]
   | ^^^^^^^^^^^^^^^^^^^^^^---^^
   |                       |
   |                       didn't expect any arguments here
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/procedural-macros.html#derive-macros>
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[proc_macro_derive(d8(a))]
LL + #[proc_macro_derive(TraitName)]
   |
LL - #[proc_macro_derive(d8(a))]
LL + #[proc_macro_derive(TraitName, attributes(name1, name2, ...))]
   |

error[E0539]: malformed `proc_macro_derive` attribute input
  --> $DIR/attribute.rs:74:1
   |
LL | #[proc_macro_derive(self)]
   | ^^^^^^^^^^^^^^^^^^^^----^^
   |                     |
   |                     expected a valid identifier here
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/procedural-macros.html#derive-macros>
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[proc_macro_derive(self)]
LL + #[proc_macro_derive(TraitName)]
   |
LL - #[proc_macro_derive(self)]
LL + #[proc_macro_derive(TraitName, attributes(name1, name2, ...))]
   |

error[E0539]: malformed `proc_macro_derive` attribute input
  --> $DIR/attribute.rs:87:1
   |
LL | #[proc_macro_derive(d11, a)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^-^^
   |                          |
   |                          the only valid argument here is `attributes`
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/procedural-macros.html#derive-macros>
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[proc_macro_derive(d11, a)]
LL + #[proc_macro_derive(TraitName)]
   |
LL - #[proc_macro_derive(d11, a)]
LL + #[proc_macro_derive(TraitName, attributes(name1, name2, ...))]
   |

error[E0539]: malformed `proc_macro_derive` attribute input
  --> $DIR/attribute.rs:95:1
   |
LL | #[proc_macro_derive(d12, attributes)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^----------^^
   |                          |
   |                          expected this to be a list
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/procedural-macros.html#derive-macros>
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[proc_macro_derive(d12, attributes)]
LL + #[proc_macro_derive(TraitName)]
   |
LL - #[proc_macro_derive(d12, attributes)]
LL + #[proc_macro_derive(TraitName, attributes(name1, name2, ...))]
   |

error[E0539]: malformed `proc_macro_derive` attribute input
  --> $DIR/attribute.rs:103:1
   |
LL | #[proc_macro_derive(d13, attributes("a"))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---^^^
   |                                     |
   |                                     expected a valid identifier here
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/procedural-macros.html#derive-macros>
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[proc_macro_derive(d13, attributes("a"))]
LL + #[proc_macro_derive(TraitName)]
   |
LL - #[proc_macro_derive(d13, attributes("a"))]
LL + #[proc_macro_derive(TraitName, attributes(name1, name2, ...))]
   |

error[E0565]: malformed `proc_macro_derive` attribute input
  --> $DIR/attribute.rs:111:1
   |
LL | #[proc_macro_derive(d14, attributes(a = ""))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^----^^^
   |                                       |
   |                                       didn't expect any arguments here
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/procedural-macros.html#derive-macros>
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[proc_macro_derive(d14, attributes(a = ""))]
LL + #[proc_macro_derive(TraitName)]
   |
LL - #[proc_macro_derive(d14, attributes(a = ""))]
LL + #[proc_macro_derive(TraitName, attributes(name1, name2, ...))]
   |

error[E0539]: malformed `proc_macro_derive` attribute input
  --> $DIR/attribute.rs:119:1
   |
LL | #[proc_macro_derive(d15, attributes(m::a))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^----^^^
   |                                     |
   |                                     expected a valid identifier here
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/procedural-macros.html#derive-macros>
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[proc_macro_derive(d15, attributes(m::a))]
LL + #[proc_macro_derive(TraitName)]
   |
LL - #[proc_macro_derive(d15, attributes(m::a))]
LL + #[proc_macro_derive(TraitName, attributes(name1, name2, ...))]
   |

error[E0565]: malformed `proc_macro_derive` attribute input
  --> $DIR/attribute.rs:127:1
   |
LL | #[proc_macro_derive(d16, attributes(a(b)))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^---^^^
   |                                      |
   |                                      didn't expect any arguments here
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/procedural-macros.html#derive-macros>
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[proc_macro_derive(d16, attributes(a(b)))]
LL + #[proc_macro_derive(TraitName)]
   |
LL - #[proc_macro_derive(d16, attributes(a(b)))]
LL + #[proc_macro_derive(TraitName, attributes(name1, name2, ...))]
   |

error[E0539]: malformed `proc_macro_derive` attribute input
  --> $DIR/attribute.rs:135:1
   |
LL | #[proc_macro_derive(d17, attributes(self))]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^----^^^
   |                                     |
   |                                     expected a valid identifier here
   |
   = note: for more information, visit <https://doc.rust-lang.org/reference/procedural-macros.html#derive-macros>
help: try changing it to one of the following valid forms of the attribute
   |
LL - #[proc_macro_derive(d17, attributes(self))]
LL + #[proc_macro_derive(TraitName)]
   |
LL - #[proc_macro_derive(d17, attributes(self))]
LL + #[proc_macro_derive(TraitName, attributes(name1, name2, ...))]
   |

error: aborting due to 16 previous errors

Some errors have detailed explanations: E0539, E0565.
For more information about an error, try `rustc --explain E0539`.
